# eml-transformer

./: .gitignore  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/10.1/: PLAN.md
.planning/phases/10.2/: PLAN.md
.planning/phases/10.3/: PLAN.md
.planning/phases/10.4/: PLAN.md
.planning/phases/10.5/: PLAN.md
docs/: LAYER_2_PLAN.md  PHASE2_NULL.md
scratch/: check_evaluator.py  check_params.py  check_v7_params.py
src/eml_transformer/: __init__.py  cli.py
src/eml_transformer/compiler/: __init__.py  catalog.py  composer.py  machine.py  rpn.py  verify.py
src/eml_transformer/layer2/: __init__.py  dataset.py  model.py  tokenizer.py  torch_dataset.py  train.py
src/eml_transformer/models/: __init__.py  decoder.py  effort_head.py  layers.py  self_aware.py
src/eml_transformer/training/: __init__.py  baselines.py  metrics.py  trainer.py
tests/: test_baselines.py  test_compiler.py  test_dataset.py  test_eml_transformer.py  test_layer2_dataset.py  test_layer2_model.py  test_layer2_tokenizer.py  test_layer2_torch_dataset.py  test_layer2_train.py  test_models.py  test_self_aware.py  test_tokenizer.py  test_trees.py
