[project]
name = "eml-transformer"
version = "0.1.0"
description = "Effort-gated compiled substrate for language models, using EML (exp-minus-log) as a verifiable mathematical IR."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ty", email = "angrysky56@users.noreply.github.com" }]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.11",
    "numpy>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[project.scripts]
eml-transformer = "eml_transformer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eml_transformer"]
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
